# chinesewall

./: .gitmodules  README.md  pyproject.toml
benchmark/: evaluate_completions.sh  generate_completions.py
benchmark/models/: chat_base.py  chinesewall.py  direct.py  edit_base.py  huggingface.py  octocoder_vllm.py  ollama.py  openai.py  starcoder2.py  starcoder_vllm.py  transformers.py
outputs/chinesewall-cache/: 100_pandas_apply_instruction_descriptive_b983848d54b1da97.txt  100_pandas_apply_instruction_lazy_1214ea27d05f5062.txt  101_house_prices_instruction_descriptive_1d04cd3f1cf984b8.txt  101_house_prices_instruction_lazy_fed3f02b2bb0fe03.txt  102_nfa_instruction_descriptive_852d94e446c02e6b.txt  102_nfa_instruction_lazy_5b295ab140ce6cfd.txt  103_postfix_instruction_descriptive_489b3c618153664c.txt  103_postfix_instruction_lazy_d3b4fc7ca041cfaa.txt  104_filesystem_instruction_descriptive_bbc91e47a69eb42b.txt  104_filesystem_instruction_lazy_3d1d9c80e61621f4.txt  105_descent_methods_instruction_descriptive_3a7d9f334a264ebe.txt  105_descent_methods_instruction_lazy_7d3ff4d8568688b2.txt  106_conways_game_instruction_descriptive_ba06497201598b8f.txt  106_conways_game_instruction_lazy_d434b0d4363ac9df.txt  107_multiindex_sort_instruction_descriptive_51bb0fd4f276bf9b.txt  107_multiindex_sort_instruction_lazy_bceb2a448eef075d.txt  10_csv_parser_instruction_descriptive_6b9d7af9f69ad568.txt  10_csv_parser_instruction_lazy_0895660c3a26bb24.txt  110_integration_instruction_descriptive_8f0d292ca2c30b15.txt  (+191 more)
paper/: bib.yaml  paper.typ
